@startuml
package Global.Architecture.Sommet {

    class Sommets {
        - List<Arc> arcsSortants
        - List<Arc> arcsEntrant
        - Set<String> rues
        - String nom

        + Sommets(List<Arc> arcsSortants, List<Arc> arcsEntrant, Set<String> rues, String nom)
        + List<Arc> getArcsSortants()
        + List<Arc> getArcsEntrant()
        + Set<String> getRues()
        + String getNom()
        + void addArcSortant(Arc arc)
        + void addArcEntrant(Arc arc)
    }

    class PointDeCollecte {
        - String rue
        - Arc localisation
        - String nom
        - int capacite
        - ArrayList<Poubelle> poubelles

        + PointDeCollecte(String rue, String nom, int capacite)
        + PointDeCollecte(Arc localisation, String nom, int capacite)
        + String getRue()
        + String getNom()
        + int getCapacite()
        + int getNombre_poubelles()
        + ArrayList<Poubelle> getPoubelles()
        + Arc getLocalisation()
    }

    class PointDeDepot {
        - String nom
        - int capacite
        - ArrayList<String> poubelles

        + PointDeDepot(String nom)
        + void chargerCamion(Camion camion, int quantite_dechets)
        + void dechargerCamion(Camion camion)
        + String getNom()
        + int getCapacite()
        + ArrayList<String> getPoubelles()
    }

    Sommets <|-- PointDeCollecte
    Sommets <|-- PointDeDepot
}
@enduml
